# create-manga-aI

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/core/: config.py  manga_generator.py  models.py  prompts.py
backend/models/: job.py  manga.py
backend/routers/: job.py  manga.py
backend/schemas/: job.py  manga.py
frontend/: vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: LoadingStatus.jsx  MangaGenerator.jsx  MangaLoader.jsx  MangeGame.jsx  ThemeInput.jsx
